fix: <footer> commented gap size

--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -52,7 +52,7 @@ a {
   @include tablet {
     justify-content: space-evenly;
     align-items: flex-start;
-    gap: 40px;
+    // gap: 40px;
   }
   @include desktop {
     justify-content: space-between;
